[package]
name = "rshield"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rshield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
reqwest = { version = "0.12.9", features = ["blocking"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.0", features = ["bundled"] }
pnet = "0.35.0"
log = "0.4"
colored = "2.0"  
byteorder = "1.4"  
rand= "0.8.5"
clap = { version = "4.5.13", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
lazy_static = "1.4"
chrono = "0.4.39"
itertools = "0.13.0"
crossbeam-channel = "0.5"
deno_core = "0.327.0" 
crossbeam = "0.8"
regex = "1.11.1"
trust-dns-resolver = "0.22"
tauri-plugin-log = "2"

[dev-dependencies]
similar = "2.0"
strsim = "0.11.1"
