[package]
name = "rshield"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rshield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
protobuf-codegen-pure = "2.3"


[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
reqwest = { version = "0.12.9", features = ["blocking"] }

select = "0.6"
futures = "0.3"

hex = "0.4"
url = "2.2"
base64 = "0.21"
native-tls = "0.2"
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32.0", features = ["bundled"] }
pnet = "0.35.0"
colored = "2.0"  
byteorder = "1.4"  
rand= "0.8.5"
clap = { version = "4.5.13", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
lazy_static = "1.4"
chrono = "0.4.39"
itertools = "0.13.0"
crossbeam-channel = "0.5"
deno_core = "0.327.0" 
crossbeam = "0.8"
regex = "1.11.1"
trust-dns-resolver = "0.22"
tauri-plugin-log = "2"
headless_chrome = "1.0.15"
flate2 = "1"
log = { version = "0.4", features = ["std"] }
protobuf = "2"
parking_lot = "0.11"
signal-hook = "0.3.14"
libc = "0.2"


[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Services",
    "Win32_System_Kernel",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp", 
    "Win32_System_Diagnostics_Debug_Extensions",
]


[dev-dependencies]
similar = "2.0"
strsim = "0.11.1"


[features]