[package]
name = "ysoserial-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
url = "2.2.2"
rand_distr = "0.5.1"

base64 = "0.22.1"
aes = "0.8"
cbc = "0.1"
generic-array = "0.14"
uuid = { version = "1.4", features = ["v4"] }
